Update and rename deepseek_html_20250515_cffc3e.html to index.html

--- a/index.html
+++ b/index.html
@@ -183,14 +183,16 @@
 
     <script>
         // ===== Firebase Setup =====
-        const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_PROJECT.firebaseapp.com",
-            projectId: "YOUR_PROJECT",
-            storageBucket: "YOUR_PROJECT.appspot.com",
-            messagingSenderId: "YOUR_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
+
+const firebaseConfig = {
+  apiKey: "AIzaSyAx0MAEUiYCGq-fY1OI-nOYR4-uRXh43ws",
+  authDomain: "tracker-6f5af.firebaseapp.com",
+  databaseURL: "https://tracker-6f5af-default-rtdb.firebaseio.com",
+  projectId: "tracker-6f5af",
+  storageBucket: "tracker-6f5af.firebasestorage.app",
+  messagingSenderId: "311345597895",
+  appId: "1:311345597895:web:34bcaecc4403985d45dde2"
+};
         firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
 
