--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
     <!-- Main Content -->
     <div class="container" id="mainContent">
         <header class="header">
-            <h1 class="welcome-message" id="welcomeMessage">Welcome to Cosmic Dimension</h1>
+            <h1 class="welcome-message" id="welcomeMessage">Welcome to Cosmic Dimension Blog</h1>
             <button class="theme-toggle" id="themeToggle">
                 <i class="fas fa-moon"></i>
             </button>
@@ -670,20 +670,20 @@
                 </div>
             </div>
             <div class="profile-details">
-                <h2>Alex Stellar</h2>
+                <h2>Shaurya (Admin)</h2>
                 <p>Hello cosmic traveler! I'm a front-end developer and UI/UX designer with a passion for creating immersive digital experiences that transport users to new dimensions.</p>
-                <p>With over 7 years of experience in the digital cosmos, I specialize in creating visually stunning interfaces with smooth animations and interactive elements.</p>
-                <p>When I'm not coding, I'm usually exploring the latest in VR technology, studying astrophysics, or creating digital art inspired by the cosmos.</p>
+                <p>With over -999999 aura points in my schooland +inf in the digital cosmos, I specialize in creating nothing with smooth nothings and interactive nothings.</p>
+                <p>When I'm not coding, I'm usually exploring the latest sleeping, studying not astrophysics but chemistry, or creating digital art inspired by the greatest Sleep and dreams.</p>
                 
                 <div class="skills">
                     <span class="skill">HTML/CSS</span>
                     <span class="skill">JavaScript</span>
-                    <span class="skill">React</span>
-                    <span class="skill">UI/UX Design</span>
-                    <span class="skill">WebGL</span>
-                    <span class="skill">Animation</span>
-                    <span class="skill">Three.js</span>
-                    <span class="skill">Responsive Design</span>
+                    <span class="skill">12th grade</span>
+                    <span class="skill">PCM</span>
+                    <span class="skill">16th feb 2009</span>
+                    <span class="skill">Anime ❌ cartoons✅</span>
+                    <span class="skill">cutting JEEvan</span>
+                    <span class="skill">not a proud but KVian</span>
                 </div>
             </div>
         </section>
@@ -693,18 +693,18 @@
             <h2 class="section-title">Cosmic Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <h3>Nebula Explorer</h3>
-                    <p>An interactive 3D visualization of cosmic nebulae with WebGL and Three.js. Explore stunning nebula formations with realistic lighting and particle effects.</p>
+                    <h3>VIDYORA</h3>
+                    <p>.........</p>
                     <a href="#" class="project-link">Explore Project</a>
                 </div>
                 <div class="project-card">
-                    <h3>Galaxy Dashboard</h3>
-                    <p>A data visualization dashboard with space-themed charts and animations. Transform your analytics into an interstellar experience.</p>
+                    <h3>Vazeer classes</h3>
+                    <p>,.........</p>
                     <a href="#" class="project-link">Explore Project</a>
                 </div>
                 <div class="project-card">
-                    <h3>Stellar Portfolio</h3>
-                    <p>A portfolio template with particle effects and cosmic transitions. Perfect for developers and designers who want to stand out.</p>
+                    <h3>Distrokill</h3>
+                    <p>..,.........</p>
                     <a href="#" class="project-link">Explore Project</a>
                 </div>
             </div>
@@ -742,7 +742,7 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <p>© 2023 Cosmic Dimension | Made with <i class="fas fa-heart" style="color: #ff0080;"></i> and Stardust</p>
+            <p>© 2025 Cosmic Dimension | Made with <i class="fas fa-heart" style="color: #ff0080;"></i> and Stardust</p>
         </footer>
     </div>
 
