--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
             <div class="profile-details">
                 <h2>Shaurya (Admin)</h2>
                 <p>Hello cosmic traveler! I'm a front-end developer and UI/UX designer with a passion for creating immersive digital experiences that transport users to new dimensions.</p>
-                <p>With over -999999 aura points in my schooland +inf in the digital cosmos, I specialize in creating nothing with smooth nothings and interactive nothings.</p>
+                <p>With over -999999 aura points in my school and +inf in the digital cosmos, I specialize in creating nothing with smooth nothings and interactive nothings.</p>
                 <p>When I'm not coding, I'm usually exploring the latest sleeping, studying not astrophysics but chemistry, or creating digital art inspired by the greatest Sleep and dreams.</p>
                 
                 <div class="skills">
@@ -695,7 +695,7 @@
                 <div class="project-card">
                     <h3>VIDYORA</h3>
                     <p>.........</p>
-                    <a href="#" class="project-link">Explore Project</a>
+                    <a href="https://sh16coder.github.io/Vidyora/" class="project-link">Explore Project</a>
                 </div>
                 <div class="project-card">
                     <h3>Vazeer classes</h3>
@@ -737,7 +737,7 @@
         <section class="share-section">
             <h2 class="section-title">Share Your Cosmic Story</h2>
             <p>Have an interesting story or project you'd like to share with the universe?</p>
-            <a href="#" class="share-link">Share Your Story</a>
+            <a href="https://sh16coder.github.io/Vidyora/st.html" class="share-link">Share Your Story</a>
         </section>
 
         <!-- Footer -->
