--- a/index.html
+++ b/index.html
@@ -700,12 +700,12 @@
                 <div class="project-card">
                     <h3>Vazeer classes</h3>
                     <p>,.........</p>
-                    <a href="#" class="project-link">Explore Project</a>
+                    <a href="https://sh16coder.github.io/Vazeer...../" class="project-link">Explore Project</a>
                 </div>
                 <div class="project-card">
                     <h3>Distrokill</h3>
                     <p>..,.........</p>
-                    <a href="#" class="project-link">Explore Project</a>
+                    <a href="https://sh16coder.github.io/Disrokill/" class="project-link">Explore Project</a>
                 </div>
             </div>
         </section>
