--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
         <section class="profile-section">
             <div class="profile-image">
                 <div class="image-container">
-                    <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Profile Picture" class="profile-img">
+                    <img src="I.jpg" alt="Profile Picture" class="profile-img">
                 </div>
             </div>
             <div class="profile-details">
