--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
                 </div>
             </div>
             <div class="profile-details">
-                <h2>Shaurya (Admin)</h2>
+                <h2>Admin Saheb</h2>
                 <p>Hello cosmic traveler! I'm a front-end developer and UI/UX designer with a passion for creating immersive digital experiences that transport users to new dimensions.</p>
                 <p>With over -999999 aura points in my school and +inf in the digital cosmos, I specialize in creating nothing with smooth nothings and interactive nothings.</p>
                 <p>When I'm not coding, I'm usually exploring the latest sleeping, studying not astrophysics but chemistry, or creating digital art inspired by the greatest Sleep and dreams.</p>
@@ -679,8 +679,8 @@
                     <span class="skill">HTML/CSS</span>
                     <span class="skill">JavaScript</span>
                     <span class="skill">12th grade</span>
-                    <span class="skill">PCM</span>
-                    <span class="skill">16th feb 2009</span>
+                    <span class="skill">PC*</span>
+                    <span class="skill">16th *** 200*</span>
                     <span class="skill">Anime ❌ cartoons✅</span>
                     <span class="skill">cutting JEEvan</span>
                     <span class="skill">not a proud but KVian</span>
@@ -699,12 +699,12 @@
                 </div>
                 <div class="project-card">
                     <h3>Vazeer classes</h3>
-                    <p>,.........</p>
+                    <p>..........</p>
                     <a href="https://sh16coder.github.io/Vazeer...../" class="project-link">Explore Project</a>
                 </div>
                 <div class="project-card">
                     <h3>Distrokill</h3>
-                    <p>..,.........</p>
+                    <p>............</p>
                     <a href="https://sh16coder.github.io/Disrokill/" class="project-link">Explore Project</a>
                 </div>
             </div>
