--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             position: relative;
             overflow: hidden;
             box-shadow: 0 0 40px var(--accent-1);
-            animation: rotate 20s linear infinite, pulse 4s ease-in-out infinite;
+            animation: pulse 4s ease-in-out infinite;
         }
 
         @keyframes pulse {
