--- a/index.html
+++ b/index.html
@@ -707,7 +707,13 @@
                     <p>............</p>
                     <a href="https://sh16coder.github.io/Disrokill/" class="project-link">Explore Project</a>
                 </div>
+                <div class="project-card">
+                    <h3>Vidyora Prodigy</h3>
+                    <p>..........</p>
+                    <a href="https://sh16coder.github.io/prodigy_vidyora/" class="project-link">Explore Project</a>
+                </div>
             </div>
+             
         </section>
 
         <!-- Diary Section -->
