--- a/index.html
+++ b/index.html
@@ -52,7 +52,51 @@
             overflow-x: hidden;
             transition: var(--transition);
         }
+        /* Notification */
+.notification {
+    position: fixed;
+    top: -100px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: var(--card-bg);
+    border: 2px solid var(--accent-1);
+    box-shadow: 0 0 25px var(--accent-2);
+    backdrop-filter: blur(15px);
+    color: var(--text);
+    padding: 1.2rem 2.5rem;
+    border-radius: 20px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-size: 1.2rem;
+    z-index: 2000;
+    transition: var(--transition);
+    opacity: 0;
+    animation: pulseGlow 3s infinite alternate;
+}
 
+.notification i {
+    color: var(--accent-3);
+    font-size: 1.5rem;
+}
+
+.notification.show {
+    top: 50px;
+    opacity: 1;
+    animation: slideDown 1s ease, pulseGlow 3s infinite alternate;
+}
+
+@keyframes slideDown {
+    0% { top: -100px; opacity: 0; transform: translateX(-50%) scale(0.8); }
+    60% { top: 60px; opacity: 1; transform: translateX(-50%) scale(1.05); }
+    100% { top: 50px; transform: translateX(-50%) scale(1); }
+}
+
+@keyframes pulseGlow {
+    0% { box-shadow: 0 0 20px var(--accent-1); }
+    100% { box-shadow: 0 0 40px var(--accent-3), 0 0 60px var(--accent-4); }
+}
         /* Particle Container */
         #particles-js {
             position: fixed;
@@ -637,6 +681,7 @@
                 height: 220px;
             }
         }
+        
     </style>
 </head>
 <body>
@@ -921,5 +966,28 @@
             }
         });
     </script>
-</body>
+    <div id="newStoryNotification" class="notification">
+    <i class="fas fa-bell"></i>
+    <span>✨ New Cosmic Story Added! ✨</span>
+</div>
+
+<script>
+    // Show notification with animation
+    function showNewStoryNotification() {
+        const notification = document.getElementById('newStoryNotification');
+        notification.classList.add('show');
+
+        // Auto-hide after 5 seconds
+        setTimeout(() => {
+            notification.classList.remove('show');
+        }, 5000);
+    }
+
+    // Example: show notification 3 seconds after page load
+    window.addEventListener('load', () => {
+        setTimeout(showNewStoryNotification, 3000);
+    });
+</script>
+</body><!-- New Story Notification -->
+
 </html>
