--- a/index.html
+++ b/index.html
@@ -757,6 +757,11 @@
                     <p>..........</p>
                     <a href="https://sh16coder.github.io/prodigy_vidyora/" class="project-link">Explore Project</a>
                 </div>
+                <div class="project-card">
+                    <h3>AdhyayanFlow</h3>
+                    <p>Best for Tablet, Laptop, Computer users</p>
+                    <a href="https://sh16coder.github.io/AdhyayanFlow/" class="project-link">Explore Project</a>
+                </div>
             </div>
              
         </section>
@@ -968,7 +973,7 @@
     </script>
     <div id="newStoryNotification" class="notification">
     <i class="fas fa-bell"></i>
-    <span>✨ New Cosmic Story Added! ✨</span>
+    <span>✨ New Cosmic Story Added! ✨ New Web Added!! ✨</span>
 </div>
 
 <script>
