--- a/index.html
+++ b/index.html
@@ -897,7 +897,7 @@
         <section class="profile-section">
             <div class="profile-image">
                 <div class="image-container">
-                    <img src="I.jpg" alt="Profile Picture" class="profile-img">
+                    <img src="3.png" alt="Profile Picture" class="profile-img">
                 </div>
             </div>
             <div class="profile-details">
