--- a/index.html
+++ b/index.html
@@ -1169,19 +1169,20 @@
         </div>
     </div>
 <!-- Add this audio element right after the opening body tag -->
+<!-- Replace the existing audio element with this -->
 <audio id="backgroundMusic" loop>
-    <source src="1.mp3" type="audio/mpeg">
+    <source src="https://assets.mixkit.co/music/preview/mixkit-space-game-668.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
 </audio>
 
-<!-- Add this popup modal right after the audio element -->
+<!-- Replace the existing music popup with this -->
 <div id="musicPopup" class="music-popup">
     <div class="popup-content">
         <div class="popup-header">
             <h2>Cosmic Soundscape</h2>
             <div class="popup-icon">🎵</div>
         </div>
-        <p>Do you want to listen my favourite background music?</p>
+        <p>Would you like to stop the cosmic background music?</p>
         <div class="popup-buttons">
             <button id="keepMusic" class="popup-btn keep-btn">
                 <i class="fas fa-play-circle"></i> Keep Playing
