--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
     <div id="particles-js"></div>
 <!-- Add this audio element right after the opening body tag -->
 <audio id="backgroundMusic" loop>
-    <source src="https://assets.mixkit.co/music/preview/mixkit-space-game-668.mp3" type="audio/mpeg">
+    <source src="1.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
 </audio>
 
@@ -897,7 +897,7 @@
         <section class="profile-section">
             <div class="profile-image">
                 <div class="image-container">
-                    <img src="I.jpg" alt="Profile Picture" class="profile-img">
+                    <img src="3.png" alt="Profile Picture" class="profile-img">
                 </div>
             </div>
             <div class="profile-details">
